<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="stHugeStructureOfPrimitive" Id="{3c1e1d20-bb3c-435c-b814-6e24917ebb8f}">
    <Declaration><![CDATA[TYPE stHugeStructureOfPrimitive :
STRUCT
	//1,024 BYTES
		_1:BYTE;
		_2:BYTE;
		_3:BYTE;
		_4:BYTE;
		_5:BYTE;
		_6:BYTE;
		_7:BYTE;
		_8:BYTE;
		_9:BYTE;
		_10:BYTE;
		_11:BYTE;
		_12:BYTE;
		_13:BYTE;
		_14:BYTE;
		_15:BYTE;
		_16:BYTE;
		_17:BYTE;
		_18:BYTE;
		_19:BYTE;
		_20:BYTE;
		_21:BYTE;
		_22:BYTE;
		_23:BYTE;
		_24:BYTE;
		_25:BYTE;
		_26:BYTE;
		_27:BYTE;
		_28:BYTE;
		_29:BYTE;
		_30:BYTE;
		_31:BYTE;
		_32:BYTE;
		_33:BYTE;
		_34:BYTE;
		_35:BYTE;
		_36:BYTE;
		_37:BYTE;
		_38:BYTE;
		_39:BYTE;
		_40:BYTE;
		_41:BYTE;
		_42:BYTE;
		_43:BYTE;
		_44:BYTE;
		_45:BYTE;
		_46:BYTE;
		_47:BYTE;
		_48:BYTE;
		_49:BYTE;
		_50:BYTE;
		_51:BYTE;
		_52:BYTE;
		_53:BYTE;
		_54:BYTE;
		_55:BYTE;
		_56:BYTE;
		_57:BYTE;
		_58:BYTE;
		_59:BYTE;
		_60:BYTE;
		_61:BYTE;
		_62:BYTE;
		_63:BYTE;
		_64:BYTE;
		_65:BYTE;
		_66:BYTE;
		_67:BYTE;
		_68:BYTE;
		_69:BYTE;
		_70:BYTE;
		_71:BYTE;
		_72:BYTE;
		_73:BYTE;
		_74:BYTE;
		_75:BYTE;
		_76:BYTE;
		_77:BYTE;
		_78:BYTE;
		_79:BYTE;
		_80:BYTE;
		_81:BYTE;
		_82:BYTE;
		_83:BYTE;
		_84:BYTE;
		_85:BYTE;
		_86:BYTE;
		_87:BYTE;
		_88:BYTE;
		_89:BYTE;
		_90:BYTE;
		_91:BYTE;
		_92:BYTE;
		_93:BYTE;
		_94:BYTE;
		_95:BYTE;
		_96:BYTE;
		_97:BYTE;
		_98:BYTE;
		_99:BYTE;
		_100:BYTE;
		_101:BYTE;
		_102:BYTE;
		_103:BYTE;
		_104:BYTE;
		_105:BYTE;
		_106:BYTE;
		_107:BYTE;
		_108:BYTE;
		_109:BYTE;
		_110:BYTE;
		_111:BYTE;
		_112:BYTE;
		_113:BYTE;
		_114:BYTE;
		_115:BYTE;
		_116:BYTE;
		_117:BYTE;
		_118:BYTE;
		_119:BYTE;
		_120:BYTE;
		_121:BYTE;
		_122:BYTE;
		_123:BYTE;
		_124:BYTE;
		_125:BYTE;
		_126:BYTE;
		_127:BYTE;
		_128:BYTE;
		_129:BYTE;
		_130:BYTE;
		_131:BYTE;
		_132:BYTE;
		_133:BYTE;
		_134:BYTE;
		_135:BYTE;
		_136:BYTE;
		_137:BYTE;
		_138:BYTE;
		_139:BYTE;
		_140:BYTE;
		_141:BYTE;
		_142:BYTE;
		_143:BYTE;
		_144:BYTE;
		_145:BYTE;
		_146:BYTE;
		_147:BYTE;
		_148:BYTE;
		_149:BYTE;
		_150:BYTE;
		_151:BYTE;
		_152:BYTE;
		_153:BYTE;
		_154:BYTE;
		_155:BYTE;
		_156:BYTE;
		_157:BYTE;
		_158:BYTE;
		_159:BYTE;
		_160:BYTE;
		_161:BYTE;
		_162:BYTE;
		_163:BYTE;
		_164:BYTE;
		_165:BYTE;
		_166:BYTE;
		_167:BYTE;
		_168:BYTE;
		_169:BYTE;
		_170:BYTE;
		_171:BYTE;
		_172:BYTE;
		_173:BYTE;
		_174:BYTE;
		_175:BYTE;
		_176:BYTE;
		_177:BYTE;
		_178:BYTE;
		_179:BYTE;
		_180:BYTE;
		_181:BYTE;
		_182:BYTE;
		_183:BYTE;
		_184:BYTE;
		_185:BYTE;
		_186:BYTE;
		_187:BYTE;
		_188:BYTE;
		_189:BYTE;
		_190:BYTE;
		_191:BYTE;
		_192:BYTE;
		_193:BYTE;
		_194:BYTE;
		_195:BYTE;
		_196:BYTE;
		_197:BYTE;
		_198:BYTE;
		_199:BYTE;
		_200:BYTE;
		_201:BYTE;
		_202:BYTE;
		_203:BYTE;
		_204:BYTE;
		_205:BYTE;
		_206:BYTE;
		_207:BYTE;
		_208:BYTE;
		_209:BYTE;
		_210:BYTE;
		_211:BYTE;
		_212:BYTE;
		_213:BYTE;
		_214:BYTE;
		_215:BYTE;
		_216:BYTE;
		_217:BYTE;
		_218:BYTE;
		_219:BYTE;
		_220:BYTE;
		_221:BYTE;
		_222:BYTE;
		_223:BYTE;
		_224:BYTE;
		_225:BYTE;
		_226:BYTE;
		_227:BYTE;
		_228:BYTE;
		_229:BYTE;
		_230:BYTE;
		_231:BYTE;
		_232:BYTE;
		_233:BYTE;
		_234:BYTE;
		_235:BYTE;
		_236:BYTE;
		_237:BYTE;
		_238:BYTE;
		_239:BYTE;
		_240:BYTE;
		_241:BYTE;
		_242:BYTE;
		_243:BYTE;
		_244:BYTE;
		_245:BYTE;
		_246:BYTE;
		_247:BYTE;
		_248:BYTE;
		_249:BYTE;
		_250:BYTE;
		_251:BYTE;
		_252:BYTE;
		_253:BYTE;
		_254:BYTE;
		_255:BYTE;
		_256:BYTE;
		_257:BYTE;
		_258:BYTE;
		_259:BYTE;
		_260:BYTE;
		_261:BYTE;
		_262:BYTE;
		_263:BYTE;
		_264:BYTE;
		_265:BYTE;
		_266:BYTE;
		_267:BYTE;
		_268:BYTE;
		_269:BYTE;
		_270:BYTE;
		_271:BYTE;
		_272:BYTE;
		_273:BYTE;
		_274:BYTE;
		_275:BYTE;
		_276:BYTE;
		_277:BYTE;
		_278:BYTE;
		_279:BYTE;
		_280:BYTE;
		_281:BYTE;
		_282:BYTE;
		_283:BYTE;
		_284:BYTE;
		_285:BYTE;
		_286:BYTE;
		_287:BYTE;
		_288:BYTE;
		_289:BYTE;
		_290:BYTE;
		_291:BYTE;
		_292:BYTE;
		_293:BYTE;
		_294:BYTE;
		_295:BYTE;
		_296:BYTE;
		_297:BYTE;
		_298:BYTE;
		_299:BYTE;
		_300:BYTE;
		_301:BYTE;
		_302:BYTE;
		_303:BYTE;
		_304:BYTE;
		_305:BYTE;
		_306:BYTE;
		_307:BYTE;
		_308:BYTE;
		_309:BYTE;
		_310:BYTE;
		_311:BYTE;
		_312:BYTE;
		_313:BYTE;
		_314:BYTE;
		_315:BYTE;
		_316:BYTE;
		_317:BYTE;
		_318:BYTE;
		_319:BYTE;
		_320:BYTE;
		_321:BYTE;
		_322:BYTE;
		_323:BYTE;
		_324:BYTE;
		_325:BYTE;
		_326:BYTE;
		_327:BYTE;
		_328:BYTE;
		_329:BYTE;
		_330:BYTE;
		_331:BYTE;
		_332:BYTE;
		_333:BYTE;
		_334:BYTE;
		_335:BYTE;
		_336:BYTE;
		_337:BYTE;
		_338:BYTE;
		_339:BYTE;
		_340:BYTE;
		_341:BYTE;
		_342:BYTE;
		_343:BYTE;
		_344:BYTE;
		_345:BYTE;
		_346:BYTE;
		_347:BYTE;
		_348:BYTE;
		_349:BYTE;
		_350:BYTE;
		_351:BYTE;
		_352:BYTE;
		_353:BYTE;
		_354:BYTE;
		_355:BYTE;
		_356:BYTE;
		_357:BYTE;
		_358:BYTE;
		_359:BYTE;
		_360:BYTE;
		_361:BYTE;
		_362:BYTE;
		_363:BYTE;
		_364:BYTE;
		_365:BYTE;
		_366:BYTE;
		_367:BYTE;
		_368:BYTE;
		_369:BYTE;
		_370:BYTE;
		_371:BYTE;
		_372:BYTE;
		_373:BYTE;
		_374:BYTE;
		_375:BYTE;
		_376:BYTE;
		_377:BYTE;
		_378:BYTE;
		_379:BYTE;
		_380:BYTE;
		_381:BYTE;
		_382:BYTE;
		_383:BYTE;
		_384:BYTE;
		_385:BYTE;
		_386:BYTE;
		_387:BYTE;
		_388:BYTE;
		_389:BYTE;
		_390:BYTE;
		_391:BYTE;
		_392:BYTE;
		_393:BYTE;
		_394:BYTE;
		_395:BYTE;
		_396:BYTE;
		_397:BYTE;
		_398:BYTE;
		_399:BYTE;
		_400:BYTE;
		_401:BYTE;
		_402:BYTE;
		_403:BYTE;
		_404:BYTE;
		_405:BYTE;
		_406:BYTE;
		_407:BYTE;
		_408:BYTE;
		_409:BYTE;
		_410:BYTE;
		_411:BYTE;
		_412:BYTE;
		_413:BYTE;
		_414:BYTE;
		_415:BYTE;
		_416:BYTE;
		_417:BYTE;
		_418:BYTE;
		_419:BYTE;
		_420:BYTE;
		_421:BYTE;
		_422:BYTE;
		_423:BYTE;
		_424:BYTE;
		_425:BYTE;
		_426:BYTE;
		_427:BYTE;
		_428:BYTE;
		_429:BYTE;
		_430:BYTE;
		_431:BYTE;
		_432:BYTE;
		_433:BYTE;
		_434:BYTE;
		_435:BYTE;
		_436:BYTE;
		_437:BYTE;
		_438:BYTE;
		_439:BYTE;
		_440:BYTE;
		_441:BYTE;
		_442:BYTE;
		_443:BYTE;
		_444:BYTE;
		_445:BYTE;
		_446:BYTE;
		_447:BYTE;
		_448:BYTE;
		_449:BYTE;
		_450:BYTE;
		_451:BYTE;
		_452:BYTE;
		_453:BYTE;
		_454:BYTE;
		_455:BYTE;
		_456:BYTE;
		_457:BYTE;
		_458:BYTE;
		_459:BYTE;
		_460:BYTE;
		_461:BYTE;
		_462:BYTE;
		_463:BYTE;
		_464:BYTE;
		_465:BYTE;
		_466:BYTE;
		_467:BYTE;
		_468:BYTE;
		_469:BYTE;
		_470:BYTE;
		_471:BYTE;
		_472:BYTE;
		_473:BYTE;
		_474:BYTE;
		_475:BYTE;
		_476:BYTE;
		_477:BYTE;
		_478:BYTE;
		_479:BYTE;
		_480:BYTE;
		_481:BYTE;
		_482:BYTE;
		_483:BYTE;
		_484:BYTE;
		_485:BYTE;
		_486:BYTE;
		_487:BYTE;
		_488:BYTE;
		_489:BYTE;
		_490:BYTE;
		_491:BYTE;
		_492:BYTE;
		_493:BYTE;
		_494:BYTE;
		_495:BYTE;
		_496:BYTE;
		_497:BYTE;
		_498:BYTE;
		_499:BYTE;
		_500:BYTE;
		_501:BYTE;
		_502:BYTE;
		_503:BYTE;
		_504:BYTE;
		_505:BYTE;
		_506:BYTE;
		_507:BYTE;
		_508:BYTE;
		_509:BYTE;
		_510:BYTE;
		_511:BYTE;
		_512:BYTE;
		_513:BYTE;
		_514:BYTE;
		_515:BYTE;
		_516:BYTE;
		_517:BYTE;
		_518:BYTE;
		_519:BYTE;
		_520:BYTE;
		_521:BYTE;
		_522:BYTE;
		_523:BYTE;
		_524:BYTE;
		_525:BYTE;
		_526:BYTE;
		_527:BYTE;
		_528:BYTE;
		_529:BYTE;
		_530:BYTE;
		_531:BYTE;
		_532:BYTE;
		_533:BYTE;
		_534:BYTE;
		_535:BYTE;
		_536:BYTE;
		_537:BYTE;
		_538:BYTE;
		_539:BYTE;
		_540:BYTE;
		_541:BYTE;
		_542:BYTE;
		_543:BYTE;
		_544:BYTE;
		_545:BYTE;
		_546:BYTE;
		_547:BYTE;
		_548:BYTE;
		_549:BYTE;
		_550:BYTE;
		_551:BYTE;
		_552:BYTE;
		_553:BYTE;
		_554:BYTE;
		_555:BYTE;
		_556:BYTE;
		_557:BYTE;
		_558:BYTE;
		_559:BYTE;
		_560:BYTE;
		_561:BYTE;
		_562:BYTE;
		_563:BYTE;
		_564:BYTE;
		_565:BYTE;
		_566:BYTE;
		_567:BYTE;
		_568:BYTE;
		_569:BYTE;
		_570:BYTE;
		_571:BYTE;
		_572:BYTE;
		_573:BYTE;
		_574:BYTE;
		_575:BYTE;
		_576:BYTE;
		_577:BYTE;
		_578:BYTE;
		_579:BYTE;
		_580:BYTE;
		_581:BYTE;
		_582:BYTE;
		_583:BYTE;
		_584:BYTE;
		_585:BYTE;
		_586:BYTE;
		_587:BYTE;
		_588:BYTE;
		_589:BYTE;
		_590:BYTE;
		_591:BYTE;
		_592:BYTE;
		_593:BYTE;
		_594:BYTE;
		_595:BYTE;
		_596:BYTE;
		_597:BYTE;
		_598:BYTE;
		_599:BYTE;
		_600:BYTE;
		_601:BYTE;
		_602:BYTE;
		_603:BYTE;
		_604:BYTE;
		_605:BYTE;
		_606:BYTE;
		_607:BYTE;
		_608:BYTE;
		_609:BYTE;
		_610:BYTE;
		_611:BYTE;
		_612:BYTE;
		_613:BYTE;
		_614:BYTE;
		_615:BYTE;
		_616:BYTE;
		_617:BYTE;
		_618:BYTE;
		_619:BYTE;
		_620:BYTE;
		_621:BYTE;
		_622:BYTE;
		_623:BYTE;
		_624:BYTE;
		_625:BYTE;
		_626:BYTE;
		_627:BYTE;
		_628:BYTE;
		_629:BYTE;
		_630:BYTE;
		_631:BYTE;
		_632:BYTE;
		_633:BYTE;
		_634:BYTE;
		_635:BYTE;
		_636:BYTE;
		_637:BYTE;
		_638:BYTE;
		_639:BYTE;
		_640:BYTE;
		_641:BYTE;
		_642:BYTE;
		_643:BYTE;
		_644:BYTE;
		_645:BYTE;
		_646:BYTE;
		_647:BYTE;
		_648:BYTE;
		_649:BYTE;
		_650:BYTE;
		_651:BYTE;
		_652:BYTE;
		_653:BYTE;
		_654:BYTE;
		_655:BYTE;
		_656:BYTE;
		_657:BYTE;
		_658:BYTE;
		_659:BYTE;
		_660:BYTE;
		_661:BYTE;
		_662:BYTE;
		_663:BYTE;
		_664:BYTE;
		_665:BYTE;
		_666:BYTE;
		_667:BYTE;
		_668:BYTE;
		_669:BYTE;
		_670:BYTE;
		_671:BYTE;
		_672:BYTE;
		_673:BYTE;
		_674:BYTE;
		_675:BYTE;
		_676:BYTE;
		_677:BYTE;
		_678:BYTE;
		_679:BYTE;
		_680:BYTE;
		_681:BYTE;
		_682:BYTE;
		_683:BYTE;
		_684:BYTE;
		_685:BYTE;
		_686:BYTE;
		_687:BYTE;
		_688:BYTE;
		_689:BYTE;
		_690:BYTE;
		_691:BYTE;
		_692:BYTE;
		_693:BYTE;
		_694:BYTE;
		_695:BYTE;
		_696:BYTE;
		_697:BYTE;
		_698:BYTE;
		_699:BYTE;
		_700:BYTE;
		_701:BYTE;
		_702:BYTE;
		_703:BYTE;
		_704:BYTE;
		_705:BYTE;
		_706:BYTE;
		_707:BYTE;
		_708:BYTE;
		_709:BYTE;
		_710:BYTE;
		_711:BYTE;
		_712:BYTE;
		_713:BYTE;
		_714:BYTE;
		_715:BYTE;
		_716:BYTE;
		_717:BYTE;
		_718:BYTE;
		_719:BYTE;
		_720:BYTE;
		_721:BYTE;
		_722:BYTE;
		_723:BYTE;
		_724:BYTE;
		_725:BYTE;
		_726:BYTE;
		_727:BYTE;
		_728:BYTE;
		_729:BYTE;
		_730:BYTE;
		_731:BYTE;
		_732:BYTE;
		_733:BYTE;
		_734:BYTE;
		_735:BYTE;
		_736:BYTE;
		_737:BYTE;
		_738:BYTE;
		_739:BYTE;
		_740:BYTE;
		_741:BYTE;
		_742:BYTE;
		_743:BYTE;
		_744:BYTE;
		_745:BYTE;
		_746:BYTE;
		_747:BYTE;
		_748:BYTE;
		_749:BYTE;
		_750:BYTE;
		_751:BYTE;
		_752:BYTE;
		_753:BYTE;
		_754:BYTE;
		_755:BYTE;
		_756:BYTE;
		_757:BYTE;
		_758:BYTE;
		_759:BYTE;
		_760:BYTE;
		_761:BYTE;
		_762:BYTE;
		_763:BYTE;
		_764:BYTE;
		_765:BYTE;
		_766:BYTE;
		_767:BYTE;
		_768:BYTE;
		_769:BYTE;
		_770:BYTE;
		_771:BYTE;
		_772:BYTE;
		_773:BYTE;
		_774:BYTE;
		_775:BYTE;
		_776:BYTE;
		_777:BYTE;
		_778:BYTE;
		_779:BYTE;
		_780:BYTE;
		_781:BYTE;
		_782:BYTE;
		_783:BYTE;
		_784:BYTE;
		_785:BYTE;
		_786:BYTE;
		_787:BYTE;
		_788:BYTE;
		_789:BYTE;
		_790:BYTE;
		_791:BYTE;
		_792:BYTE;
		_793:BYTE;
		_794:BYTE;
		_795:BYTE;
		_796:BYTE;
		_797:BYTE;
		_798:BYTE;
		_799:BYTE;
		_800:BYTE;
		_801:BYTE;
		_802:BYTE;
		_803:BYTE;
		_804:BYTE;
		_805:BYTE;
		_806:BYTE;
		_807:BYTE;
		_808:BYTE;
		_809:BYTE;
		_810:BYTE;
		_811:BYTE;
		_812:BYTE;
		_813:BYTE;
		_814:BYTE;
		_815:BYTE;
		_816:BYTE;
		_817:BYTE;
		_818:BYTE;
		_819:BYTE;
		_820:BYTE;
		_821:BYTE;
		_822:BYTE;
		_823:BYTE;
		_824:BYTE;
		_825:BYTE;
		_826:BYTE;
		_827:BYTE;
		_828:BYTE;
		_829:BYTE;
		_830:BYTE;
		_831:BYTE;
		_832:BYTE;
		_833:BYTE;
		_834:BYTE;
		_835:BYTE;
		_836:BYTE;
		_837:BYTE;
		_838:BYTE;
		_839:BYTE;
		_840:BYTE;
		_841:BYTE;
		_842:BYTE;
		_843:BYTE;
		_844:BYTE;
		_845:BYTE;
		_846:BYTE;
		_847:BYTE;
		_848:BYTE;
		_849:BYTE;
		_850:BYTE;
		_851:BYTE;
		_852:BYTE;
		_853:BYTE;
		_854:BYTE;
		_855:BYTE;
		_856:BYTE;
		_857:BYTE;
		_858:BYTE;
		_859:BYTE;
		_860:BYTE;
		_861:BYTE;
		_862:BYTE;
		_863:BYTE;
		_864:BYTE;
		_865:BYTE;
		_866:BYTE;
		_867:BYTE;
		_868:BYTE;
		_869:BYTE;
		_870:BYTE;
		_871:BYTE;
		_872:BYTE;
		_873:BYTE;
		_874:BYTE;
		_875:BYTE;
		_876:BYTE;
		_877:BYTE;
		_878:BYTE;
		_879:BYTE;
		_880:BYTE;
		_881:BYTE;
		_882:BYTE;
		_883:BYTE;
		_884:BYTE;
		_885:BYTE;
		_886:BYTE;
		_887:BYTE;
		_888:BYTE;
		_889:BYTE;
		_890:BYTE;
		_891:BYTE;
		_892:BYTE;
		_893:BYTE;
		_894:BYTE;
		_895:BYTE;
		_896:BYTE;
		_897:BYTE;
		_898:BYTE;
		_899:BYTE;
		_900:BYTE;
		_901:BYTE;
		_902:BYTE;
		_903:BYTE;
		_904:BYTE;
		_905:BYTE;
		_906:BYTE;
		_907:BYTE;
		_908:BYTE;
		_909:BYTE;
		_910:BYTE;
		_911:BYTE;
		_912:BYTE;
		_913:BYTE;
		_914:BYTE;
		_915:BYTE;
		_916:BYTE;
		_917:BYTE;
		_918:BYTE;
		_919:BYTE;
		_920:BYTE;
		_921:BYTE;
		_922:BYTE;
		_923:BYTE;
		_924:BYTE;
		_925:BYTE;
		_926:BYTE;
		_927:BYTE;
		_928:BYTE;
		_929:BYTE;
		_930:BYTE;
		_931:BYTE;
		_932:BYTE;
		_933:BYTE;
		_934:BYTE;
		_935:BYTE;
		_936:BYTE;
		_937:BYTE;
		_938:BYTE;
		_939:BYTE;
		_940:BYTE;
		_941:BYTE;
		_942:BYTE;
		_943:BYTE;
		_944:BYTE;
		_945:BYTE;
		_946:BYTE;
		_947:BYTE;
		_948:BYTE;
		_949:BYTE;
		_950:BYTE;
		_951:BYTE;
		_952:BYTE;
		_953:BYTE;
		_954:BYTE;
		_955:BYTE;
		_956:BYTE;
		_957:BYTE;
		_958:BYTE;
		_959:BYTE;
		_960:BYTE;
		_961:BYTE;
		_962:BYTE;
		_963:BYTE;
		_964:BYTE;
		_965:BYTE;
		_966:BYTE;
		_967:BYTE;
		_968:BYTE;
		_969:BYTE;
		_970:BYTE;
		_971:BYTE;
		_972:BYTE;
		_973:BYTE;
		_974:BYTE;
		_975:BYTE;
		_976:BYTE;
		_977:BYTE;
		_978:BYTE;
		_979:BYTE;
		_980:BYTE;
		_981:BYTE;
		_982:BYTE;
		_983:BYTE;
		_984:BYTE;
		_985:BYTE;
		_986:BYTE;
		_987:BYTE;
		_988:BYTE;
		_989:BYTE;
		_990:BYTE;
		_991:BYTE;
		_992:BYTE;
		_993:BYTE;
		_994:BYTE;
		_995:BYTE;
		_996:BYTE;
		_997:BYTE;
		_998:BYTE;
		_999:BYTE;
		_1000:BYTE;		
		_1001:BYTE;	
		_1002:BYTE;	
		_1003:BYTE;	
		_1004:BYTE;	
		_1005:BYTE;	
		_1006:BYTE;	
		_1007:BYTE;	
		_1008:BYTE;	
		_1009:BYTE;	
		_1010:BYTE;	
		_1011:BYTE;	
		_1012:BYTE;	
		_1013:BYTE;	
		_1014:BYTE;	
		_1015:BYTE;	
		_1016:BYTE;	
		_1017:BYTE;	
		_1018:BYTE;	
		_1019:BYTE;	
		_1020:BYTE;	
		_1021:BYTE;
		_1022:BYTE;	
		_1023:BYTE;	
		_1024:BYTE;				
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>